--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: My Repository
-description: Feel free to bookmark this to keep an eye on my project updates
+title: Are Housing Prices in University Towns Less Affected by Recessions?
+description: Based on the assignments from the course Introduction to Data Science in Python by University of Michigan on Coursera
