--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Housing Prices in University Towns
-title: Data Acquisition and Cleaning
+category: Data Acquisition and Cleaning
 description: Based on the assignments from Introduction to Data Science in Python by University of Michigan on Coursera
