--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
-title: Housing Prices in University Towns
-category: Data Acquisition and Cleaning
+title: Are Housing Prices in University Towns Less Affected by Recessions?
 description: Based on the assignments from Introduction to Data Science in Python by University of Michigan on Coursera
