--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Are Housing Prices in University Towns Less Affected by Recessions?
-description: Based on the assignments from Introduction to Data Science in Python by University of Michigan on Coursera
+description: Based on assignments from Introduction to Data Science in Python by University of Michigan on Coursera
