--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: Are Housing Prices in University Towns Less Affected by Recessions?
-description: Based on assignments from Introduction to Data Science in Python by University of Michigan on Coursera
+description: Eugene Agronin, Ph.D. | eagronin@gmail.com 
+github:
+  home_url: https://eagronin.github.io/portfolio/
+  tar_url: https://www.linkedin.com/in/eagronin
